// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeedbackCategoryComponent should render the component with color and icon and selected 1`] = `
<ng-component
  bindings={[Function Object]}
>
  <app-feedback-category>
    <div
      class="feedback-category flex-row green selected"
    >
      <app-icon
        class="icon"
      />
    </div>
  </app-feedback-category>
</ng-component>
`;

exports[`FeedbackCategoryComponent should render the component with color, without icon and not selected 1`] = `
<ng-component
  bindings={[Function Object]}
>
  <app-feedback-category>
    <div
      class="feedback-category flex-row green"
    >
    </div>
  </app-feedback-category>
</ng-component>
`;

exports[`FeedbackCategoryComponent should render the component with color, without icon and selected 1`] = `
<ng-component
  bindings={[Function Object]}
>
  <app-feedback-category>
    <div
      class="feedback-category flex-row green selected"
    >
    </div>
  </app-feedback-category>
</ng-component>
`;

exports[`FeedbackCategoryComponent should render the component without color, icon and not selected 1`] = `
<ng-component
  bindings={[Function Object]}
>
  <app-feedback-category>
    <div
      class="feedback-category flex-row"
    >
    </div>
  </app-feedback-category>
</ng-component>
`;

exports[`FeedbackCategoryComponent should render the component without color, icon and selected 1`] = `
<ng-component
  bindings={[Function Object]}
>
  <app-feedback-category>
    <div
      class="feedback-category flex-row selected"
    >
    </div>
  </app-feedback-category>
</ng-component>
`;

exports[`FeedbackCategoryComponent should render the component without color, with icon and not selected 1`] = `
<ng-component
  bindings={[Function Object]}
>
  <app-feedback-category>
    <div
      class="feedback-category flex-row"
    >
      <app-icon
        class="icon"
      />
    </div>
  </app-feedback-category>
</ng-component>
`;
